divisione delle tre aree principali

--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+  
+<header>        <!--INIZIO HEADER-->
+    <nav>    <!--INIZIO NAV-->
+
+    </nav>   <!--FINE NAV-->
+
+</header>           <!--FINE HEADER-->
+
+
+<main>          <!--INIZIO MAIN-->
+
+</main>        <!--FINE MAIN-->
+
+
+<footer>        <!--INIZIO FOOTER-->
+
+</footer>       <!--FINE FOOTER HEADER-->
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
