bozza della navbar

--- a/index.html
+++ b/index.html
@@ -8,8 +8,22 @@
 </head>
 <body>
   
-<header>        <!--INIZIO HEADER-->
-    <nav>    <!--INIZIO NAV-->
+<header>       <!--INIZIO HEADER-->
+    <nav>           <!--INIZIO NAV-->
+
+  <ul class="lista1" >     <!--LISTA1-->
+    <li class="logo">LOGO</li>
+    <li><a href="#">Perchè Dropbox</a></li>
+    <li><a href="#">Funzioni</a></li>
+    <li><a href="#">Piani e Prezzi</a></li>
+  </ul>
+
+  <ul class="lista2">   <!--LISTA2-->
+<li><a href="#">Supporto</a></li>
+<li><a href="#">Contatta l'ufficio vendite</a></li>
+<li><a href="#">Accedi</a></li>
+<li><button>Inizia</button></li>
+  </ul>
 
     </nav>   <!--FINE NAV-->
 
