--- a/index.html
+++ b/index.html
@@ -27,6 +27,26 @@
 
     </nav>   <!--FINE NAV-->
 
+<div class="header-container">
+
+   <div class="titolo">
+    <h1>TITOLO</h1>
+   </div> 
+
+ <div class="hero">   
+<div class="pink">
+  testo 
+</div>
+
+<div class="blue">
+   immagine
+</div>
+</div>
+
+
+</div>
+
+
 </header>           <!--FINE HEADER-->
 
 
