impostazione struttura del main

--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 </div>
 </div>
 
-
 </div>
 
 
@@ -51,6 +50,50 @@
 
 
 <main>          <!--INIZIO MAIN-->
+
+  <section class="sezione1">        <!--SEZIONE 1-->
+   <div class="main-container">
+
+   </div>
+  </section> 
+
+  <section class="sezione2">        <!--SEZIONE 2-->
+    <div class="main-container">
+
+    </div>
+  </section>
+
+  <section class="sezione3">         <!--SEZIONE 3-->
+    <div class="main-container">
+
+    </div>
+  </section>
+
+  <section class="sezione4">            <!--SEZIONE 4-->
+    <div class="main-container">
+
+    </div>
+  </section>
+
+  <section class="sezione5">            <!--SEZIONE 5-->
+   
+
+    
+  </section>
+
+  <section class="sezione6">           <!--SEZIONE 6-->
+    <div class="main-container">
+
+    </div>
+  </section>
+
+  <section class="sezione7">          <!--SEZIONE 7-->
+    <div class="main-container">
+
+    </div>
+  </section>
+
+
 
 </main>        <!--FINE MAIN-->
 
