impostazione html della prima sezione del main

--- a/index.html
+++ b/index.html
@@ -54,6 +54,34 @@
   <section class="sezione1">        <!--SEZIONE 1-->
    <div class="main-container">
 
+   <div class="sottotitolo1">
+    <h2>sottotitolo 1</h2>
+   </div>
+
+   <div class="radio">
+  <input type="radio"> testo
+  <input type="radio">  testo
+   </div>
+
+   <div class="columns">
+    <div class="column1">
+
+    </div>
+
+    <div class="column2">
+
+    </div>
+
+    <div class="column3">
+
+    </div>
+   </div>
+
+
+   <div class="row">
+
+   </div>
+
    </div>
   </section> 
 
@@ -78,7 +106,7 @@
   <section class="sezione5">            <!--SEZIONE 5-->
    
 
-    
+
   </section>
 
   <section class="sezione6">           <!--SEZIONE 6-->
