css della prima sezione del main

--- a/index.html
+++ b/index.html
@@ -52,53 +52,57 @@
 <main>          <!--INIZIO MAIN-->
 
   <section class="sezione1">        <!--SEZIONE 1-->
-   <div class="main-container">
+   <div class="main-container1">
 
    <div class="sottotitolo1">
     <h2>sottotitolo 1</h2>
    </div>
 
    <div class="radio">
-  <input type="radio"> testo
-  <input type="radio">  testo
+  <input type="radio">Fatturazione mensile
+  <input type="radio">Fatturazione annuale
    </div>
 
    <div class="columns">
     <div class="column1">
-
+     column1
+     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam iusto corrupti illum pariatur mollitia reiciendis odit porro possimus vitae nam?
     </div>
 
     <div class="column2">
-
+     column2
+     Lorem ipsum, dolor sit amet consectetur adipisicing elit. A vero suscipit voluptates? Corrupti expedita aut debitis ratione molestias cupiditate ipsum.
     </div>
 
     <div class="column3">
-
+     column 3
+     Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste praesentium adipisci ipsum architecto ipsa quos fugiat necessitatibus sint suscipit iusto?
     </div>
    </div>
 
 
    <div class="row">
-
+    row
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt sint possimus aut voluptatem neque modi itaque voluptates, accusantium esse placeat.
    </div>
 
    </div>
   </section> 
 
   <section class="sezione2">        <!--SEZIONE 2-->
-    <div class="main-container">
+    <div class="main-container2">
 
     </div>
   </section>
 
   <section class="sezione3">         <!--SEZIONE 3-->
-    <div class="main-container">
+    <div class="main-container3">
 
     </div>
   </section>
 
   <section class="sezione4">            <!--SEZIONE 4-->
-    <div class="main-container">
+    <div class="main-container4">
 
     </div>
   </section>
@@ -110,13 +114,13 @@
   </section>
 
   <section class="sezione6">           <!--SEZIONE 6-->
-    <div class="main-container">
+    <div class="main-container6">
 
     </div>
   </section>
 
   <section class="sezione7">          <!--SEZIONE 7-->
-    <div class="main-container">
+    <div class="main-container7">
 
     </div>
   </section>
