--- a/index.html
+++ b/index.html
@@ -91,12 +91,45 @@
 
   <section class="sezione2">        <!--SEZIONE 2-->
     <div class="main-container2">
-
+     <div class="box1">
+     image
+     </div>
+     <div class="box2">
+     text
+     </div>  
     </div>
   </section>
 
   <section class="sezione3">         <!--SEZIONE 3-->
     <div class="main-container3">
+        <div>
+            <h2>sottotitolo2</h2>   
+        </div>
+     <div class="B-container"> 
+    <div class="b">
+     B1
+    </div>
+
+    <div class="b">
+     B2
+    </div>
+
+    <div class="b">
+     B3
+    </div>
+
+    <div class="b">
+       B4
+    </div>
+
+    <div class="b">
+     B5
+    </div>
+
+    <div class="b">
+     B6
+    </div>
+  </div>
 
     </div>
   </section>
