--- a/index.html
+++ b/index.html
@@ -108,26 +108,32 @@
      <div class="B-container"> 
     <div class="b">
      B1
+     Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto nisi ex, fugiat facilis dolorem molestias qui similique. Minima, vel cum.
     </div>
 
     <div class="b">
      B2
+     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium vero deleniti dolorum eaque provident inventore atque aliquam, fuga quia veritatis?
     </div>
 
     <div class="b">
      B3
+     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem consequuntur magni temporibus natus, ipsa inventore aut molestias alias tenetur ipsam?
     </div>
 
     <div class="b">
        B4
+       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui explicabo harum impedit, aperiam dolore itaque laboriosam minus maiores distinctio inventore?
     </div>
 
     <div class="b">
      B5
+     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur sed, repellendus explicabo consectetur distinctio libero! Corporis facere quasi ratione at?
     </div>
 
     <div class="b">
      B6
+     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas necessitatibus sunt, repellendus enim quisquam neque ab numquam maxime assumenda sed.
     </div>
   </div>
 
@@ -136,6 +142,11 @@
 
   <section class="sezione4">            <!--SEZIONE 4-->
     <div class="main-container4">
+
+       <div class="sottotitolo3"> 
+     <h2>Più di 500.000 team utilizzano Dropboc Business</h2>
+      </div>
+    <a href="#"> Scopri di più sui nostri clienti</a>
 
     </div>
   </section>
