fatto sezione 6 e 7 (la 5 la faccio dopo)

--- a/index.html
+++ b/index.html
@@ -159,7 +159,12 @@
 
   <section class="sezione6">           <!--SEZIONE 6-->
     <div class="main-container6">
-
+     <div class="B1">
+       testo
+     </div>
+      <div class="B2">
+       pulsante
+      </div>
     </div>
   </section>
 
