--- a/index.html
+++ b/index.html
@@ -175,12 +175,25 @@
   </section>
 
 
-
 </main>        <!--FINE MAIN-->
 
 
 <footer>        <!--INIZIO FOOTER-->
+<div class="footer-container">
 
+<div class="info">   
+<div>column1</div>
+<div>column2</div>
+<div>column3</div>
+<div>column4</div>
+<div>column5</div>
+</div>
+
+<div>
+italiano
+</div>
+
+</div>
 </footer>       <!--FINE FOOTER HEADER-->
 
 
