parte della sezione 5 del main fatta

--- a/index.html
+++ b/index.html
@@ -151,8 +151,23 @@
     </div>
   </section>
 
-  <section class="sezione5">            <!--SEZIONE 5-->
-   
+  <section class="sezione5">   <!--SEZIONE 5-->
+                               
+   <div class="div1">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+   </div>
+
+   <div class="div2">due</div>
+
+   <div class="div3">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+   </div>
 
 
   </section>
