--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>           <!--INIZIO NAV-->
 
   <ul class="lista1" >     <!--LISTA1-->
-    <li class="logo">LOGO</li>
+    <li class="logo"><img src="img/logo-small.png" alt="logo"></li>
     <li><a href="#">Perchè Dropbox</a></li>
     <li><a href="#">Funzioni</a></li>
     <li><a href="#">Piani e Prezzi</a></li>
@@ -30,7 +30,7 @@
 <div class="header-container">
 
    <div class="titolo">
-    <h1>TITOLO</h1>
+    <h1>Tutto ciò che ti serve per il lavoro in un unico posto</h1>
    </div> 
 
  <div class="hero">   
