--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dropbox</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/0cfb02db8e.js" crossorigin="anonymous"></script>
 </head>
 <body>
   
@@ -35,11 +36,23 @@
 
  <div class="hero">   
 <div class="pink">
-  testo 
+
+<p>
+  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil, ullam. Quo, maxime error quas maiores corporis autem ducimus. Magnam asperiores nisi vitae odit sequi illum harum praesentium, fugit sit, facilis ab nihil in, facere officiis quidem dignissimos. Optio, illum mollitia!  
+</p>
+
+ <button>Inizia la prova gratuita</button>
+
+ <p>
+ Annulla in qualsiasi momento   
+</p>
+
+<i class="fa-solid fa-arrow-down"></i>
+
 </div>
 
 <div class="blue">
-   immagine
+<img src="img/jumbo.png" alt="jumbo">
 </div>
 </div>
 
