inizio impostazione della sezione 5 con le varie università ecc

--- a/index.html
+++ b/index.html
@@ -167,19 +167,19 @@
   <section class="sezione5">   <!--SEZIONE 5-->
                                
    <div class="div1">
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+    <div><img src="img/designit.svg" alt=""></div>
+    <div><img src="img/arizona_state_university.svg" alt=""></div>
+    <div><img src="img/university_of_florida.svg" alt=""></div>
+    <div><img src="img/topps.svg" alt=""></div>
    </div>
 
    <div class="div2">due</div>
 
    <div class="div3">
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+    <div><img src="img/world_bicycle_relief.svg" alt=""></div>
+    <div><img src="img/hearst_corp.svg" alt=""></div>
+    <div><img src="img/lonely_planet.svg" alt=""></div>
+    <div><img src="img/clear_channel.svg" alt=""></div>
    </div>
 
 
