fatto il grosso della sezione 2 del main

--- a/index.html
+++ b/index.html
@@ -255,10 +255,12 @@
     <div class="main-container2">
      <div class="box1">
      <img src="img/partner.png" alt="">
-     </div>
+    </div>
      <div class="box2">
+
      <strong>Entra in contatto con un partner Dropbox</strong>
-     
+     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore officiis, mollitia laudantium reiciendis aliquam eligendi quam unde laboriosam odit? Molestias repudiandae iste dignissimos, sapiente voluptatum molestiae sed maiores debitis incidunt.</p>
+     <button>Trova un partner</button>
 
      </div>  
     </div>
@@ -267,7 +269,7 @@
   <section class="sezione3">         <!--SEZIONE 3-->
     <div class="main-container3">
         <div>
-            <h2>sottotitolo2</h2>   
+            <h2></h2>   
         </div>
      <div class="B-container"> 
     <div class="b">
