fatto il grosso della sezione 3 del main

--- a/index.html
+++ b/index.html
@@ -269,37 +269,43 @@
   <section class="sezione3">         <!--SEZIONE 3-->
     <div class="main-container3">
         <div>
-            <h2></h2>   
+            <h2>Esegui più operazioni con Dropbox Business </h2>   
         </div>
      <div class="B-container"> 
     <div class="b">
-     B1
-     Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto nisi ex, fugiat facilis dolorem molestias qui similique. Minima, vel cum.
+     <img src="img/business-feature-switching-tools.png" alt="">
+     <strong>Passa di meno da uno strumento all'altro</strong>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem soluta assumenda deserunt, id nemo provident inventore, nobis alias similique, nostrum ab sunt fugit dolorem perspiciatis quo ducimus. Suscipit omnis officia unde, nisi dolores id eum quasi et quia non laudantium!</p>
     </div>
 
     <div class="b">
-     B2
-     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium vero deleniti dolorum eaque provident inventore atque aliquam, fuga quia veritatis?
+        <img src="img/business-feature-send-files-it.png" alt="">
+        <strong>Passa di meno da uno strumento all'altro</strong>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem soluta assumenda deserunt, id nemo provident inventore, nobis alias similique, nostrum ab sunt fugit dolorem perspiciatis quo ducimus. Suscipit omnis officia unde, nisi dolores id eum quasi et quia non laudantium!</p>
     </div>
 
     <div class="b">
-     B3
-     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem consequuntur magni temporibus natus, ipsa inventore aut molestias alias tenetur ipsam?
+       <img src="img/business-feature-coordinate-it.png" alt="">
+       <strong>Passa di meno da uno strumento all'altro</strong>
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem soluta assumenda deserunt, id nemo provident inventore, nobis alias similique, nostrum ab sunt fugit dolorem perspiciatis quo ducimus. Suscipit omnis officia unde, nisi dolores id eum quasi et quia non laudantium!</p>
     </div>
 
     <div class="b">
-       B4
-       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui explicabo harum impedit, aperiam dolore itaque laboriosam minus maiores distinctio inventore?
+        <img src="img/business-feature-integrations-it.png" alt="">
+        <strong>Passa di meno da uno strumento all'altro</strong>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem soluta assumenda deserunt, id nemo provident inventore, nobis alias similique, nostrum ab sunt fugit dolorem perspiciatis quo ducimus. Suscipit omnis officia unde, nisi dolores id eum quasi et quia non laudantium!</p>
     </div>
 
     <div class="b">
-     B5
-     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur sed, repellendus explicabo consectetur distinctio libero! Corporis facere quasi ratione at?
+        <img src="img/business-feature-multi-device.png" alt="">
+        <strong>Passa di meno da uno strumento all'altro</strong>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem soluta assumenda deserunt, id nemo provident inventore, nobis alias similique, nostrum ab sunt fugit dolorem perspiciatis quo ducimus. Suscipit omnis officia unde, nisi dolores id eum quasi et quia non laudantium!</p>
     </div>
 
     <div class="b">
-     B6
-     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas necessitatibus sunt, repellendus enim quisquam neque ab numquam maxime assumenda sed.
+        <img src="img/business-feature-security.png" alt="">
+        <strong>Passa di meno da uno strumento all'altro</strong>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem soluta assumenda deserunt, id nemo provident inventore, nobis alias similique, nostrum ab sunt fugit dolorem perspiciatis quo ducimus. Suscipit omnis officia unde, nisi dolores id eum quasi et quia non laudantium!</p>
     </div>
   </div>
 
