fatto il grosso della sezione 6

--- a/index.html
+++ b/index.html
@@ -346,12 +346,12 @@
 
   <section class="sezione6">           <!--SEZIONE 6-->
     <div class="main-container6">
-     <div class="B1">
-       testo
-     </div>
-      <div class="B2">
-       pulsante
-      </div>
+     
+       <h2>Porta Dropbox Business nella tua azienda</h2>
+     
+       <div>
+       <button>Inizia la tua prova gratuita</button>
+        </div>
     </div>
   </section>
 
