fatto il footer

--- a/index.html
+++ b/index.html
@@ -369,15 +369,69 @@
 <div class="footer-container">
 
 <div class="info">   
-<div>column1</div>
-<div>column2</div>
-<div>column3</div>
-<div>column4</div>
-<div>column5</div>
+<div>
+<strong>Dropbox</strong>
+<ul>
+    <li>Applicazione desktop</li>
+    <li>Perche Dropbox</li>
+    <li>Piani</li>
+    <li>Sicurezza</li>
+    <li>Funzioni</li>
+</ul>
 </div>
 
 <div>
-italiano
+    <strong>Prodotti</strong>
+    <ul>
+        <li>Applicazione desktop</li>
+        <li>Perche Dropbox</li>
+        <li>Piani</li>
+        <li>Sicurezza</li>
+        <li>Funzioni</li>
+    </ul>
+</div>
+
+<div>
+    <strong>Azienda</strong>
+    <ul>
+        <li>Applicazione desktop</li>
+        <li>Perche Dropbox</li>
+        <li>Piani</li>
+        <li>Sicurezza</li>
+        <li>Funzioni</li>
+    </ul>
+</div>
+
+<div>
+    <strong>Supporto</strong>
+    <ul>
+        <li>Applicazione desktop</li>
+        <li>Perche Dropbox</li>
+        <li>Piani</li>
+        <li>Sicurezza</li>
+        <li>Funzioni</li>
+    </ul>
+</div>
+
+<div>
+    <strong>Community</strong>
+    <ul>
+        <li>Applicazione desktop</li>
+        <li>Perche Dropbox</li>
+        <li>Piani</li>
+        <li>Sicurezza</li>
+        <li>Funzioni</li>
+    </ul>
+</div>
+
+
+</div>
+
+<div class="italiano">
+<hr>  
+<i class="fa-solid fa-earth-americas"></i>  
+Italiano 
+<i class="fa-solid fa-caret-up"></i>
 </div>
 
 </div>
