fatto la sezione 7 del main

--- a/index.html
+++ b/index.html
@@ -357,6 +357,22 @@
 
   <section class="sezione7">          <!--SEZIONE 7-->
     <div class="main-container7">
+     <h2>Domande frequenti </h2>
+     <div>
+       <p> Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+       <i class="fa-solid fa-chevron-down"></i>
+    </div>
+
+     <div>
+        <p>Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+        <i class="fa-solid fa-chevron-down"></i>
+    </div>
+
+     <div>
+        <p>Quale è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+        <i class="fa-solid fa-chevron-down"></i>
+    </div>
+
 
     </div>
   </section>
