--- a/index.html
+++ b/index.html
@@ -358,7 +358,11 @@
     <div><img src="img/topps.svg" alt=""></div>
    </div>
 
-   <div class="div2">due</div>
+   <div class="div2"> 
+    <img src="img/designit.svg" alt=""> 
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti expedita saepe corrupti. Cumque eum asperiores numquam ea omnis? Asperiores ea doloribus, minima laborum vel numquam voluptatum aliquid quis fuga. Doloremque asperiores voluptatum voluptatem quis facere fugiat, exercitationem pariatur similique ipsum.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore velit corrupti neque exercitationem iste vel in commodi! Blanditiis id sapiente, molestias harum in officiis natus ea quos incidunt, aspernatur modi libero voluptatem maxime nostrum aut laudantium, accusantium temporibus aliquam corrupti.</p>
+ </div>
 
    <div class="div3">
     <div><img src="img/world_bicycle_relief.svg" alt=""></div>
