sitemato la sezione 5 del main con aggiunta di animazioni

--- a/index.html
+++ b/index.html
@@ -352,10 +352,10 @@
   <section class="sezione5">   <!--SEZIONE 5-->
                                
    <div class="div1">
-    <div><img src="img/designit.svg" alt=""></div>
-    <div><img src="img/arizona_state_university.svg" alt=""></div>
-    <div><img src="img/university_of_florida.svg" alt=""></div>
-    <div><img src="img/topps.svg" alt=""></div>
+    <div style="background-color: rgba(162, 211, 155, 1)"><img src="img/designit.svg" alt=""></div>
+    <div style="background-color:rgba(97, 8, 43, 1)"><img src="img/arizona_state_university.svg" alt=""></div>
+    <div style="background-color:rgba(0, 147, 206, 1)"><img src="img/university_of_florida.svg" alt=""></div>
+    <div style="background-color:rgba(255, 28, 28, 1)"><img src="img/topps.svg" alt=""></div>
    </div>
 
    <div class="div2"> 
@@ -365,10 +365,10 @@
  </div>
 
    <div class="div3">
-    <div><img src="img/world_bicycle_relief.svg" alt=""></div>
-    <div><img src="img/hearst_corp.svg" alt=""></div>
-    <div><img src="img/lonely_planet.svg" alt=""></div>
-    <div><img src="img/clear_channel.svg" alt=""></div>
+    <div style="background-color: rgba(213, 0, 31, 1)"><img src="img/world_bicycle_relief.svg" alt=""></div>
+    <div style="background-color:rgba(180, 208, 231, 1)"><img src="img/hearst_corp.svg" alt=""></div>
+    <div style="background-color:rgba(13, 36, 129, 1)"><img src="img/lonely_planet.svg" alt=""></div>
+    <div style="background-color:rgba(255, 216, 48, 1)"><img src="img/clear_channel.svg" alt=""></div>
    </div>
 
 
