Sistemato sezione 1 del main e aggiunto animazione alla navbar

--- a/index.html
+++ b/index.html
@@ -72,8 +72,13 @@
    </div>
 
    <div class="radio">
-  <input type="radio">Fatturazione mensile
-  <input type="radio">Fatturazione annuale
+
+  <input id="radio1" type="radio" name="check">
+  <label for="radio1">Fatturazione mensile</label>
+
+  <input id="radio2" type="radio" name="check">
+  <label for="radio2">Fatturazione annuale</label>
+
    </div>
 
    <div class="columns">
