sistemato la sezione 5 del main

--- a/index.html
+++ b/index.html
@@ -367,7 +367,9 @@
     <img src="img/designit.svg" alt=""> 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti expedita saepe corrupti. Cumque eum asperiores numquam ea omnis? Asperiores ea doloribus, minima laborum vel numquam voluptatum aliquid quis fuga. Doloremque asperiores voluptatum voluptatem quis facere fugiat, exercitationem pariatur similique ipsum.</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore velit corrupti neque exercitationem iste vel in commodi! Blanditiis id sapiente, molestias harum in officiis natus ea quos incidunt, aspernatur modi libero voluptatem maxime nostrum aut laudantium, accusantium temporibus aliquam corrupti.</p>
- </div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam facilis minus hic. Minima nesciunt tempora voluptatibus nihil saepe unde praesentium eius! Molestias, quas culpa. Eum quas dolores facilis magnam, repudiandae sed totam enim ratione deleniti omnis neque perferendis! Soluta, explicabo.</p>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore vitae hic recusandae magni tempore nulla, porro fuga veniam nesciunt autem obcaecati incidunt voluptatum? Qui eos, recusandae, tempore voluptas illum explicabo laudantium id maxime rerum obcaecati pariatur suscipit aperiam quibusdam quasi.</p>
+   </div>
 
    <div class="div3">
     <div style="background-color: rgba(213, 0, 31, 1)"><img src="img/world_bicycle_relief.svg" alt=""></div>
